# GTK_calculator

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  GTK_calculator.code-workspace  README.md  app_manifest.rc  vcpkg.json
res/: custom-theme.css  gtk_test.ui
resources/: resources.gresource.xml  style.css
resources/ui/: main_ui_layout.ui
src/: Application.c  Application.h  Calculator.c  Calculator.h  ResourceManager.h  main.c
